# matrix_multiplikation

./: Cargo.toml
benches/: benchmark.rs
src/: lib.rs  matrix.rs  test.rs
src/algorithmen/: crossbeam.rs  manuell.rs  manuell_sicher.rs  manuell_unsicher.rs  rayon.rs  simd.rs  simd_tiling.rs  single.rs  tiling.rs  unroll.rs
